fix e scrollbar hidden

--- a/src/styles.css
+++ b/src/styles.css
@@ -5,3 +5,11 @@
 
 
 
+
+html {
+  overflow:   scroll;
+}
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
